Add RapidJson for saving configurations
- Several improvements have been made to the code
- Added save function for configuration files, to do:
  - Add UI indications for unsaved changes.
  - Add Load function.
  - Add Save as.

--- a/file-sorter/CMakeLists.txt
+++ b/file-sorter/CMakeLists.txt
@@ -14,6 +14,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
+include_directories("rapidjson")
+
 set(TS_FILES file-sorter_en_US.ts)
 
 set(PROJECT_SOURCES
